<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Qr.LeerQr"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lector_qr"
        android:textSize="20dp" />
    <EditText
        android:id="@+id/EditTextQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15dp"
        android:hint="@string/aqui_se_muestra_el_qr_leido"/>
    <WebView
        android:id="@+id/webqr"
        android:layout_width="match_parent"
        android:layout_height="500dp" />

    <Button
        android:id="@+id/btn_leer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leer_codigo_qr"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>
    <Button
        android:id="@+id/btn_cargarWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar_en_la_web"
        android:textSize="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"/>






</LinearLayout>