<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_gravity="center"
                android:src="@drawable/logochinawok" />

            <TextView
                android:id="@+id/textView_ForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="25dp"
                android:textColor="@color/red"
                android:text="@string/change_password" />
            <ProgressBar
                android:id="@+id/progress_changePassword"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_changepassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/email"
                    android:background="#00000000"
                    android:drawableEnd="@drawable/ic_email"/>
            </com.google.android.material.textfield.TextInputLayout>

<!--            <TextView-->
<!--                android:id="@+id/textView_Email"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textSize="17dp"-->
<!--                android:text="@string/email"-->
<!--                android:fontFamily="sans-serif-condensed-medium"-->
<!--                android:gravity="center"-->
<!--                android:textAlignment="center"/>-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/new_password"
                    android:background="#00000000"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/ic_key"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/confirm_new_password"
                    android:background="#00000000"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/ic_key"/>
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/btn_changePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change Password"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/red"
                />
            <TextView
                android:id="@+id/textView_LoginHere"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/login_here"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView_SignUpHere"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/sign_up_here"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:textAlignment="center"/>

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>